data/derived/comb/progs/unify/prog4254.ml.out
Characters 56-61:
  h b f
  ^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
